saadab kõik transaktsiooni andmed
